--- a/style.css
+++ b/style.css
@@ -50,6 +50,7 @@ main {
     margin: 8% auto;
     font-family: 'Barlow Semi Condensed', sans-serif;
     
+    
 }
 
 main section {
@@ -93,6 +94,9 @@ p {
     grid-column: 1 / 3;
     grid-row: 1 / 2;
     color: var(--light-grayblue);
+    background-image: url('./images/bg-pattern-quotation.svg');
+    background-repeat: no-repeat;
+    background-position: 90% 0;
     
     
 }
@@ -130,7 +134,7 @@ p {
     align-items: flex-start;
     justify-content: flex-start;
     margin-bottom: 20px;
-    height: 40px;
+    min-height: 40px;
 
 }
 
